tests/paczka1/fuzzy1/12904440.err
Error in line 1: Hps S975 76,7
Error in line 15: JWGqGMr8Pq S975 98,4
Error in line 7: S317 S317 60,9
Error in line 24: 4lDIJNFo A17 96,5
